site banner style

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/hellofresh.ico">
     <link rel="stylesheet" href="asetss/css/index.css">
-    <title>Home</title>
+    <title>Sofreh Salam</title>
 </head>
 
 <body>
@@ -43,7 +43,24 @@
                 </div>
             </div>
         </nav>
-        <section class="banner"></section>
+        <section class="banner">
+            <label class="badge" for="">Daily Discounti</label>
+            <h1 class="title margin-top-baner">Fruits&nbsp; § <br> Vegetables</h1>
+            <p class="about margin-top-baner">
+                These superfoods are packed with vital nutrients, including vitamins and minerals that can help keep you health. Plus, they’re easy to enjoy-just add water and let the magic happen!
+            </p>
+            <button class="button-baner margin-top-baner">
+                <span>View More</span>
+                <img src="/asetss/img/Arrow Right.svg" alt="">
+            </button>
+            <div class="Pegatina-descuento margin-top-baner">
+                <img src="/asetss/img/Pegatina.svg" alt="">
+                <strong>-20%</strong>
+            </div>
+            <div class="Fruit-image margin-top-baner">
+                <img src="/asetss/img/Fruit.svg" alt="">
+            </div>
+        </section>
     </header>
 </body>
 
