construction of the first sectione

--- a/index.html
+++ b/index.html
@@ -58,10 +58,151 @@
                 <strong>-20%</strong>
             </div>
             <div class="Fruit-image margin-top-baner">
-                <img src="/asetss/img/Fruit.svg" alt="">
+                <img src="/asetss/img/Fruit.png" alt="">
             </div>
         </section>
     </header>
+    <main class="container">
+        <section class="porduct-introduction">
+            <div class="title-introduction">
+                <strong class="text-titel">Love our Categories</strong>
+                <button class="pordoct-button">
+                    <span>
+                        View More
+                    </span>
+                    <img src="/asetss/img/Arrow Right.svg" alt="">
+                </button>
+            </div>
+            <div class="pordocts-section">
+                <div class="pordoct-item">
+                    <img src="/asetss/img/Blueberry.png" alt="">
+                    <div class="pordoct-information pordoct-cover">
+                        <h4>Fruits</h4>
+                        <p>So what you’re looking for fresh produce meals</p>
+                        <button class="pordoct-information-button">
+                            <span>
+                                View More
+                            </span>
+                            <img src="/asetss/img/Arrow Right.svg" alt="">
+                        </button>
+                    </div>
+                </div>
+                <div class="pordoct-item">
+                    <img src="/asetss/img/Blueberry.png" alt="">
+                    <div class="pordoct-information pordoct-cover">
+                        <h4>Vegetables</h4>
+                        <p>So So what you’re looking for fresh produce meals</p>
+                        <button class="pordoct-information-button">
+                            <span>
+                                View More
+                            </span>
+                            <img src="/asetss/img/Arrow Right.svg" alt="">
+                        </button>
+                    </div>
+                </div>
+                <div class="pordoct-item">
+                    <img src="/asetss/img/Blueberry.png" alt="">
+                    <div class="pordoct-information pordoct-cover">
+                        <h4>Bakers</h4>
+                        <p>So what you’re looking for fresh produce meals</p>
+                        <button class="pordoct-information-button">
+                            <span>
+                                View More
+                            </span>
+                            <img src="/asetss/img/Arrow Right.svg" alt="">
+                        </button>
+                    </div>
+                </div>
+                <div class="pordoct-item">
+                    <img src="/asetss/img/Blueberry.png" alt="">
+                    <div class="pordoct-information pordoct-cover">
+                        <h4>Juices</h4>
+                        <p>So what you’re looking for fresh produce meals</p>
+                        <button class="pordoct-information-button">
+                            <span>
+                                View More
+                            </span>
+                            <img src="/asetss/img/Arrow Right.svg" alt="">
+                        </button>
+                    </div>
+                </div>
+                <div class="pordoct-item">
+                    <img src="/asetss/img/Blueberry.png" alt="">
+                    <div class="pordoct-information pordoct-cover">
+                        <h4>Cake</h4>
+                        <p>So what you’re looking for fresh produce meals</p>
+                        <button class="pordoct-information-button">
+                            <span>
+                                View More
+                            </span>
+                            <img src="/asetss/img/Arrow Right.svg" alt="">
+                        </button>
+                    </div>
+                </div>
+                <div class="pordoct-item">
+                    <img src="/asetss/img/Blueberry.png" alt="">
+                    <div class="pordoct-information pordoct-cover">
+                        <h4>Smoothies</h4>
+                        <p>So what you’re looking for fresh produce meals</p>
+                        <button class="pordoct-information-button">
+                            <span>
+                                View More
+                            </span>
+                            <img src="/asetss/img/Arrow Right.svg" alt="">
+                        </button>
+                    </div>
+                </div>
+                <div class="pordoct-item">
+                    <img src="/asetss/img/Blueberry.png" alt="">
+                    <div class="pordoct-information pordoct-cover">
+                        <h4>Eggs</h4>
+                        <p>So what you’re looking for fresh produce meals</p>
+                        <button class="pordoct-information-button">
+                            <span>
+                                View More
+                            </span>
+                            <img src="/asetss/img/Arrow Right.svg" alt="">
+                        </button>
+                    </div>
+                </div>
+                <div class="pordoct-item">
+                    <img src="/asetss/img/Blueberry.png" alt="">
+                    <div class="pordoct-information pordoct-cover">
+                        <h4>Noodles</h4>
+                        <p>So what you’re looking for fresh produce meals</p>
+                        <button class="pordoct-information-button">
+                            <span>
+                                View More
+                            </span>
+                            <img src="/asetss/img/Arrow Right.svg" alt="">
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="porduct-introduction">
+            <div class="title-introduction">
+                <strong class="text-titel">Love our Categories</strong>
+                <button class="pordoct-button">
+                    <span>
+                        View More
+                    </span>
+                    <img src="/asetss/img/Arrow Right.svg" alt="">
+                </button>
+            </div>
+        </section>
+        <section class="porduct-introduction">
+            <div class="title-introduction">
+                <strong class="text-titel">Love our Categories</strong>
+                <button class="pordoct-button">
+                    <span>
+                        View More
+                    </span>
+                    <img src="/asetss/img/Arrow Right.svg" alt="">
+                </button>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
