Construction of the second section

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </section>
     </header>
     <main class="container">
-        <section class="porduct-introduction">
+        <section class="porduct-introduction1">
             <div class="title-introduction">
                 <strong class="text-titel">Love our Categories</strong>
                 <button class="pordoct-button">
@@ -88,7 +88,7 @@
                     </div>
                 </div>
                 <div class="pordoct-item">
-                    <img src="/asetss/img/Blueberry.png" alt="">
+                    <img src="/asetss/img/Vegetables.jpg" alt="">
                     <div class="pordoct-information pordoct-cover">
                         <h4>Vegetables</h4>
                         <p>So So what you’re looking for fresh produce meals</p>
@@ -101,7 +101,7 @@
                     </div>
                 </div>
                 <div class="pordoct-item">
-                    <img src="/asetss/img/Blueberry.png" alt="">
+                    <img src="/asetss/img/Bakers.jpg" alt="">
                     <div class="pordoct-information pordoct-cover">
                         <h4>Bakers</h4>
                         <p>So what you’re looking for fresh produce meals</p>
@@ -114,7 +114,7 @@
                     </div>
                 </div>
                 <div class="pordoct-item">
-                    <img src="/asetss/img/Blueberry.png" alt="">
+                    <img src="/asetss/img/Juices.jpg" alt="">
                     <div class="pordoct-information pordoct-cover">
                         <h4>Juices</h4>
                         <p>So what you’re looking for fresh produce meals</p>
@@ -127,7 +127,7 @@
                     </div>
                 </div>
                 <div class="pordoct-item">
-                    <img src="/asetss/img/Blueberry.png" alt="">
+                    <img src="/asetss/img/Cake.jpg" alt="">
                     <div class="pordoct-information pordoct-cover">
                         <h4>Cake</h4>
                         <p>So what you’re looking for fresh produce meals</p>
@@ -140,7 +140,7 @@
                     </div>
                 </div>
                 <div class="pordoct-item">
-                    <img src="/asetss/img/Blueberry.png" alt="">
+                    <img src="/asetss/img/Smoothies.jpg" alt="">
                     <div class="pordoct-information pordoct-cover">
                         <h4>Smoothies</h4>
                         <p>So what you’re looking for fresh produce meals</p>
@@ -153,7 +153,7 @@
                     </div>
                 </div>
                 <div class="pordoct-item">
-                    <img src="/asetss/img/Blueberry.png" alt="">
+                    <img src="/asetss/img/eggs.jpg" alt="">
                     <div class="pordoct-information pordoct-cover">
                         <h4>Eggs</h4>
                         <p>So what you’re looking for fresh produce meals</p>
@@ -166,7 +166,7 @@
                     </div>
                 </div>
                 <div class="pordoct-item">
-                    <img src="/asetss/img/Blueberry.png" alt="">
+                    <img src="/asetss/img/Noodles.jpg" alt="">
                     <div class="pordoct-information pordoct-cover">
                         <h4>Noodles</h4>
                         <p>So what you’re looking for fresh produce meals</p>
@@ -180,7 +180,185 @@
                 </div>
             </div>
         </section>
-        <section class="porduct-introduction">
+        <section class="porduct-introduction2">
+            <div class="title-introduction">
+                <strong class="text-titel">Love our Categories</strong>
+                <button class="pordoct-button">
+                    <span>
+                        View More
+                    </span>
+                    <img src="/asetss/img/Arrow Right.svg" alt="">
+                </button>
+            </div>
+            <section class="card-section">
+                <div class="card-item">
+                    <div class="image">
+                        <img src="/asetss/img/apple.png" alt="">
+                    </div>
+
+                    <div class="card-information">
+                        <span>Fruits</span>
+                        <strong>Pomme</strong>
+                        <div class="star-box">
+                            <span class="star">&#9733;</span>
+                            <span class="star">&#9733;</span>
+                            <span class="star">&#9733;</span>
+                            <span class="star">&#9733;</span>
+                            <span class="star">&#9734;</span>
+                            <span class="star-number">(1)</span>
+                        </div>
+                        <div class="sell-box">
+                            <b class="">175.00</b>
+                            <small class="">DA</small>
+                            <del class="">240.00</del>
+                            <small class="">DA</small>
+                        </div>
+                        <div class="input-box">
+                            <div class="size-box">
+                                <label for="">Size:</label>
+                                <div class="size-input">
+                                    <select name="" id="" title="Category">
+                                        <option value="">1</option>
+                                        <option value="">2</option>
+                                        <option value="">3</option>
+                                    </select>
+                                    <small class="">Kg</small>
+                                </div>
+                            </div>
+
+                            <div class="quantity-box">
+                                <label for="">Quantity</label>
+                                <div class="number-input">
+                                    <input type="number" name="" id="" title="Quantity" value="1" min="1" max="10">
+                                    <small class="plus">+</small>
+                                    <small class="minus">-</small>
+                                </div>
+                            </div>
+                        </div>
+                        <button class="card-button">
+                            <span>
+                                Add to Cart
+                            </span>
+                            <img src="/asetss/img/Arrow Right.svg" alt="">
+                        </button>
+                    </div>
+                    <span class="heart">
+                        <img src="/asetss/img/heart2.svg" alt="">
+                    </span>
+                </div>
+                <div class="card-item">
+                    <div class="image">
+                        <img src="/asetss/img/Brocoli Shake.png" alt="">
+                    </div>
+
+                    <div class="card-information">
+                        <span>Fruits</span>
+                        <strong>Brocoli Shake</strong>
+                        <div class="star-box">
+                            <span class="star">&#9733;</span>
+                            <span class="star">&#9733;</span>
+                            <span class="star">&#9733;</span>
+                            <span class="star">&#9733;</span>
+                            <span class="star">&#9734;</span>
+                            <span class="star-number">(1)</span>
+                        </div>
+                        <div class="sell-box">
+                            <b class="">175.00</b>
+                            <small class="">DA</small>
+                            <del class="">240.00</del>
+                            <small class="">DA</small>
+                        </div>
+                        <div class="input-box">
+                            <div class="size-box">
+                                <label for="">Size:</label>
+                                <div class="size-input">
+                                    <select name="" id="" title="Category">
+                                        <option value="">1</option>
+                                        <option value="">2</option>
+                                        <option value="">3</option>
+                                    </select>
+                                    <small class="">Liter</small>
+                                </div>
+                            </div>
+                            <div class="quantity-box">
+                                <label for="">Quantity</label>
+                                <div class="number-input">
+                                    <input type="number" name="" id="" title="Quantity" value="1" min="1" max="10">
+                                    <small class="plus">+</small>
+                                    <small class="minus">-</small>
+                                </div>
+                            </div>
+                        </div>
+                        <button class="card-button">
+                            <span>
+                                Add to Cart
+                            </span>
+                            <img src="/asetss/img/Arrow Right.svg" alt="">
+                        </button>
+                    </div>
+                    <span class="heart">
+                        <img src="/asetss/img/heart3.svg" alt="">
+                    </span>
+                </div>
+                <div class="card-item">
+                    <div class="image">
+                        <img src="/asetss/img/Donuts.png" alt="">
+                    </div>
+
+                    <div class="card-information">
+                        <span>Fruits</span>
+                        <strong>Donuts</strong>
+                        <div class="star-box">
+                            <span class="star">&#9733;</span>
+                            <span class="star">&#9733;</span>
+                            <span class="star">&#9733;</span>
+                            <span class="star">&#9733;</span>
+                            <span class="star">&#9734;</span>
+                            <span class="star-number">(1)</span>
+                        </div>
+                        <div class="sell-box">
+                            <b class="">175.00</b>
+                            <small class="">DA</small>
+                            <del class="">240.00</del>
+                            <small class="">DA</small>
+                        </div>
+                        <div class="input-box">
+                            <div class="size-box">
+                                <label for="">Size:</label>
+                                <div class="size-input">
+                                    <select name="" id="" title="Category">
+                                        <option value="">1</option>
+                                        <option value="">2</option>
+                                        <option value="">3</option>
+                                    </select>
+                                    <small class="">Pics</small>
+                                </div>
+                            </div>
+
+                            <div class="quantity-box">
+                                <label for="">Quantity</label>
+                                <div class="number-input">
+                                    <input type="number" name="" id="" title="Quantity" value="1" min="1" max="10">
+                                    <small class="plus">+</small>
+                                    <small class="minus">-</small>
+                                </div>
+                            </div>
+                        </div>
+                        <button class="card-button">
+                            <span>
+                                Add to Cart
+                            </span>
+                            <img src="/asetss/img/Arrow Right.svg" alt="">
+                        </button>
+                    </div>
+                    <span class="heart">
+                        <img src="/asetss/img/heart2.svg" alt="">
+                    </span>
+                </div>
+
+            </section>
+        </section>
+        <section class="porduct-introduction3">
             <div class="title-introduction">
                 <strong class="text-titel">Love our Categories</strong>
                 <button class="pordoct-button">
@@ -191,17 +369,7 @@
                 </button>
             </div>
         </section>
-        <section class="porduct-introduction">
-            <div class="title-introduction">
-                <strong class="text-titel">Love our Categories</strong>
-                <button class="pordoct-button">
-                    <span>
-                        View More
-                    </span>
-                    <img src="/asetss/img/Arrow Right.svg" alt="">
-                </button>
-            </div>
-        </section>
+
     </main>
 </body>
 
