Construction of the third section

--- a/index.html
+++ b/index.html
@@ -368,6 +368,183 @@
                     <img src="/asetss/img/Arrow Right.svg" alt="">
                 </button>
             </div>
+            <div class="porduct-introduction3-menu">
+                <ul>
+                    <li class="yellow-accent">All Categories</li>
+                    <li>Vegetables</li>
+                    <li>Fruits</li>
+                    <li>Juices</li>
+                    <li>Bakers</li>
+                </ul>
+            </div>
+            <section class="card-section card-section3">
+                <div class="card-item">
+                    <div class="image">
+                        <img src="/asetss/img/apple.png" alt="">
+                    </div>
+
+                    <div class="card-information">
+                        <span>Fruits</span>
+                        <strong>Pomme</strong>
+                        <div class="star-box">
+                            <span class="star">&#9733;</span>
+                            <span class="star">&#9733;</span>
+                            <span class="star">&#9733;</span>
+                            <span class="star">&#9733;</span>
+                            <span class="star">&#9734;</span>
+                            <span class="star-number">(1)</span>
+                        </div>
+                        <div class="sell-box">
+                            <b class="">175.00</b>
+                            <small class="">DA</small>
+                            <del class="">240.00</del>
+                            <small class="">DA</small>
+                        </div>
+                        <div class="input-box">
+                            <div class="size-box">
+                                <label for="">Size:</label>
+                                <div class="size-input">
+                                    <select name="" id="" title="Category">
+                                        <option value="">1</option>
+                                        <option value="">2</option>
+                                        <option value="">3</option>
+                                    </select>
+                                    <small class="">Kg</small>
+                                </div>
+                            </div>
+
+                            <div class="quantity-box">
+                                <label for="">Quantity</label>
+                                <div class="number-input">
+                                    <input type="number" name="" id="" title="Quantity" value="1" min="1" max="10">
+                                    <small class="plus">+</small>
+                                    <small class="minus">-</small>
+                                </div>
+                            </div>
+                        </div>
+                        <button class="card-button">
+                            <span>
+                                Add to Cart
+                            </span>
+                            <img src="/asetss/img/Arrow Right.svg" alt="">
+                        </button>
+                    </div>
+                    <span class="heart">
+                        <img src="/asetss/img/heart2.svg" alt="">
+                    </span>
+                </div>
+                <div class="card-item">
+                    <div class="image">
+                        <img src="/asetss/img/Brocoli Shake.png" alt="">
+                    </div>
+
+                    <div class="card-information">
+                        <span>Fruits</span>
+                        <strong>Brocoli Shake</strong>
+                        <div class="star-box">
+                            <span class="star">&#9733;</span>
+                            <span class="star">&#9733;</span>
+                            <span class="star">&#9733;</span>
+                            <span class="star">&#9733;</span>
+                            <span class="star">&#9734;</span>
+                            <span class="star-number">(1)</span>
+                        </div>
+                        <div class="sell-box">
+                            <b class="">175.00</b>
+                            <small class="">DA</small>
+                            <del class="">240.00</del>
+                            <small class="">DA</small>
+                        </div>
+                        <div class="input-box">
+                            <div class="size-box">
+                                <label for="">Size:</label>
+                                <div class="size-input">
+                                    <select name="" id="" title="Category">
+                                        <option value="">1</option>
+                                        <option value="">2</option>
+                                        <option value="">3</option>
+                                    </select>
+                                    <small class="">Liter</small>
+                                </div>
+                            </div>
+                            <div class="quantity-box">
+                                <label for="">Quantity</label>
+                                <div class="number-input">
+                                    <input type="number" name="" id="" title="Quantity" value="1" min="1" max="10">
+                                    <small class="plus">+</small>
+                                    <small class="minus">-</small>
+                                </div>
+                            </div>
+                        </div>
+                        <button class="card-button">
+                            <span>
+                                Add to Cart
+                            </span>
+                            <img src="/asetss/img/Arrow Right.svg" alt="">
+                        </button>
+                    </div>
+                    <span class="heart">
+                        <img src="/asetss/img/heart3.svg" alt="">
+                    </span>
+                </div>
+                <div class="card-item">
+                    <div class="image">
+                        <img src="/asetss/img/Donuts.png" alt="">
+                    </div>
+
+                    <div class="card-information">
+                        <span>Fruits</span>
+                        <strong>Donuts</strong>
+                        <div class="star-box">
+                            <span class="star">&#9733;</span>
+                            <span class="star">&#9733;</span>
+                            <span class="star">&#9733;</span>
+                            <span class="star">&#9733;</span>
+                            <span class="star">&#9734;</span>
+                            <span class="star-number">(1)</span>
+                        </div>
+                        <div class="sell-box">
+                            <b class="">175.00</b>
+                            <small class="">DA</small>
+                            <del class="">240.00</del>
+                            <small class="">DA</small>
+                        </div>
+                        <div class="input-box">
+                            <div class="size-box">
+                                <label for="">Size:</label>
+                                <div class="size-input">
+                                    <select name="" id="" title="Category">
+                                        <option value="">1</option>
+                                        <option value="">2</option>
+                                        <option value="">3</option>
+                                    </select>
+                                    <small class="">Pics</small>
+                                </div>
+                            </div>
+
+                            <div class="quantity-box">
+                                <label for="">Quantity</label>
+                                <div class="number-input">
+                                    <input type="number" name="" id="" title="Quantity" value="1" min="1" max="10">
+                                    <small class="plus">+</small>
+                                    <small class="minus">-</small>
+                                </div>
+                            </div>
+                        </div>
+                        <button class="card-button">
+                            <span>
+                                Add to Cart
+                            </span>
+                            <img src="/asetss/img/Arrow Right.svg" alt="">
+                        </button>
+                    </div>
+                    <span class="heart">
+                        <img src="/asetss/img/heart2.svg" alt="">
+                    </span>
+                </div>
+
+            </section>
+        </section>
         </section>
 
     </main>
